# vetos-systems

./: .gitignore  INCIDENT_REPORT.md  Makefile  README.md  REPRODUCIBILITY.md  requirements.txt  verify.py
ai-failure-gates/: README.md  coverage_liveness_gate.py  uncertainty_gatekeeper.py
ai-failure-gates/CLG/: symbolic_governor.py
artifacts/document-gate/: README.md  gate.py
artifacts/epistemic-instruments/: README.md  semantic_auditor_v3_3.py
audits/: 2026_Q1_Extraction_Matrix_Universal_Audit_Topology.md  Asymmetric_Gatekeeper_Error_Transfer.md  Intervention_Control_Spec.md  LATE_STAGE_CAPITALISM_SYSTEMS_AUDIT.md  Late_stage_capitalism.md  README.md  counterfactual_failure_analysis__mean_based_auditing.md  supplement-illusion_fitness-influencer-audit_white-paper.md  systemic-failure-grammar.md
probes/: ai_context_nonlinearity_probe_v3.py
prototypes/: rap_stress_harness.py
samples/: sample_failure_oracle_output.json  sample_funding_payload.json  sample_support_tickets.csv
scripts/: bootstrap_cleanroom.sh
tests/: test_failure_oracle.py  test_funding_audit.py  test_semantic_auditor.py
tools/: backtest_harness.py  macro_engine_v2.1.py
visualizations/: sleep_as_disinhibited_brain_maintenance.md
work-samples/: failure_oracle.c  failure_oracle.py  killing-bad-ideas-early.md
work-samples/text-scalpel/: README.md  main.py  pyproject.toml  requirements.txt  vetos_gate.py  vetos_proof_001_text_scalpel_conservation.py  vetos_proof_002_model_integrity.py
work-samples/text-scalpel/src/text_scalpel/: __init__.py  api.py  core.py  ui.py
(+29 files in other folders)
